@@ -2,8 +2,11 @@
  * CLI interface program for Tony Nixon's Pocket Programmer 
  * For more info on the Pocket Programmer see http://bubblesoftonline.com/pocket/pocket.html
  * Copyright Brandon Fosdick 2001
- * This software and all of its components are available under the BSD License
- * For a copy of the BSD License see http://www.freebsd.org
+
+	This code is made available to the public under a BSD-like license, a copy of which
+	should have been provided with this code in the file LICENSE. For a copy of the BSD 
+	license template please visit http://www.opensource.org/licenses/bsd-license.php
+
  * */
 
 #define	USE_OLD_TTY
