@@ -1,6 +1,11 @@
 /*	Filename: test_intelhex.cc
  *	Test the functionality of the intelhex module
  *	Created	20020901	Brandon Fosdick
+
+	This code is made available to the public under a BSD-like license, a copy of which
+	should have been provided with this code in the file LICENSE. For a copy of the BSD 
+	license template please visit http://www.opensource.org/licenses/bsd-license.php
+
  *	*/
 
 #include "intelhex.h"
